Fixed addresses alignments at small screens

--- a/UI/views/ContactUs/ContactUs.module.scss
+++ b/UI/views/ContactUs/ContactUs.module.scss
@@ -74,3 +74,12 @@
     }
   }
 }
+
+.addresses {
+  * {
+    @include below-tablet {
+      text-align: center;
+      margin: 0 auto;
+    }
+  }
+}
